--- a/style.scss
+++ b/style.scss
@@ -320,6 +320,29 @@ p.clear {
     }
 }
 
+@keyframes shine {
+    to {
+      background-position: -200% center;
+    }
+}
+
+.loading {
+    text-align: center;
+    
+    background: linear-gradient(to right, #BBB 20%, #DDD 40%, #DDD 60%, #BBB 80%);
+    background-size: 200% auto;
+    
+    color: #000;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    
+    animation: shine 1s linear infinite;
+
+    pointer-events: none;
+    cursor: default;
+}
 .gallery-nav {
   margin: 0 auto 30px;
   text-align: center;
