Flickity mostly working

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,5 +7,5 @@
     <link href="{{ site.baseurl }}/resources/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/jquery.skidder.css">
-    <!-- <link rel="stylesheet" href="{{ site.baseurl }}/css/flickity.css"> -->
+    <link rel="stylesheet" href="{{ site.baseurl }}/css/flickity.css">
 </head>
