--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
     </div>
     {% for category in site.portfolio %}
     <div id="{{category.id}}" class="slideshow-wrapper {% if site.initial-portfolio == category.id %}active {% endif %}">
-        <div class="slideshow hidden">
+        <!-- <div class="slideshow hidden">
             {% assign tag = 'img-preload' %}
             {% if site.initial-portfolio == category.id %}
                 {% assign tag = 'img' %}
@@ -47,10 +47,62 @@
             {% for image in category.images %}
             <div class="slide"><{{tag}} src="{{image}}-small.jpg" srcset="{{image}}-small.jpg 1x, {{image}}.jpg 2x"></div>
             {% endfor %}
+        </div> -->
+
+        <div class="carousel">
+            {% assign tag = 'img' %}
+            {% if site.initial-portfolio == category.id %}
+                {% assign tag = 'img' %}
+            {% endif %}
+            {% for image in category.images %}
+            <div class="carousel-cell">
+                <div class="center-helper">
+                    <{{tag}} src="{{image}}-small.jpg" srcset="{{image}}-small.jpg 1x, {{image}}.jpg 2x">
+                </div>
+            </div>
+                
+            {% endfor %}
         </div>
     </div>
     {% endfor %}
     
+    <style>
+.flickity-viewport {
+    min-height: 100%;
+}
+.flickity-slider {
+    height: 100%;
+}
+.flickity-slider:before {
+    content:" "; display:inline-block; height:100%; vertical-align:middle;
+}
+
+.center-helper {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.carousel {
+  /* background: #EEE; */
+  width: 100%;
+  height: calc(100% - 35px);
+}
+
+.carousel-cell {
+    display: inline-block;
+  margin-right: 20px;
+  height: 100%;
+  overflow: hidden;
+}
+
+.carousel-cell img {
+  max-width: calc(100vw - 220px - 100px);
+  max-height: 100vh;
+}
+
+
+    </style>
     <div id="contact" class="slideshow-wrapper">
         <form id="contact-form" method="POST">
             <p id="thanks" style="display: none;">
@@ -71,7 +123,7 @@
 <script src="{{ site.baseurl }}/js/jquery.js"></script>
 <script src="{{ site.baseurl }}/js/imagesloaded.pkgd.min.js"></script>
 <script src="{{ site.baseurl }}/js/jquery.skidder.js"></script>
-<!-- <script src="{{ site.baseurl }}/js/flickity.pkgd.min.jss"></script> -->
+<script src="{{ site.baseurl }}/js/flickity.pkgd.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.15.1/jquery.validate.min.js"></script>
 <script>
 
@@ -92,8 +144,32 @@ $(document).ready(function() {
             var category = $slideshow.parent()[0].id;
             $slideshow.imagesLoaded( function() {
                 // $slideshow.skidder({animationType: 'css', maxWidth: 0, maxHeight: 0, scaleSlides: true});
-                $slideshow.skidder({animationType: 'css', scaleSlides: false, maxWidth: "100%", maxHeight: "100%", swiping: false});
+                // $slideshow.skidder({animationType: 'css', scaleSlides: false, maxWidth: "100%", maxHeight: "100%", swiping: false});
+                $slideshow.flickity({
+                    imagesLoaded: true,
+                    // percentPosition: false,
+                    // adaptiveHeight: true,
+                    setGallerySize: true,
+                    wrapAround: true,
+                });
                 $slideshow.removeClass('hidden');
+
+                var $imgs = $slideshow.find('.carousel-cell img');
+                // get transform property
+                var docStyle = document.documentElement.style;
+                var transformProp = typeof docStyle.transform == 'string' ?
+                'transform' : 'WebkitTransform';
+                // get Flickity instance
+                var flkty = $slideshow.data('flickity');
+
+                $slideshow.on( 'scroll.flickity', function() {
+                    flkty.slides.forEach( function( slide, i ) {
+                        var img = $imgs[i];
+                        var x = ( slide.target + flkty.x ) * -1/3;
+                        img.style[ transformProp ] = 'translateX(' + x  + 'px)';
+                    });
+                });
+
                 $('#menu-' + category).removeClass('loading');
                 if(typeof cb == 'function') {
                     cb();
@@ -101,9 +177,10 @@ $(document).ready(function() {
             });
     }
 
-    $('.slideshow-wrapper.active .slideshow').each(function() {
+    $('.slideshow-wrapper.active .carousel').each(function() {
+
         setupSlideshow(this, function() {
-            $('.slideshow-wrapper:not(.active)').find('.slideshow').each(function() {
+            $('.slideshow-wrapper:not(.active)').find('.carousel').each(function() {
                 setupSlideshow(this);
             })
         })
@@ -118,23 +195,23 @@ $(document).ready(function() {
   });
 
   function centerSlides() {
-      $('.slideshow-wrapper').each(function() {
-        var $slideshow = $(this);
-        var $slide = $slideshow.find('.slide.active');
-        var $skidder = $slideshow.find('.skidder-wrapper')
+    //   $('.slideshow-wrapper').each(function() {
+    //     var $slideshow = $(this);
+    //     var $slide = $slideshow.find('.slide.active');
+    //     var $skidder = $slideshow.find('.skidder-wrapper')
 
-        var left = $skidder.css('margin-left');
-        var imgWidth = $slide.width();
-        var slideshowWidth = $slideshow.width();
-        var dif =  $slide.offset().left - $slideshow.offset().left + imgWidth/2 - slideshowWidth/2;
+    //     var left = $skidder.css('margin-left');
+    //     var imgWidth = $slide.width();
+    //     var slideshowWidth = $slideshow.width();
+    //     var dif =  $slide.offset().left - $slideshow.offset().left + imgWidth/2 - slideshowWidth/2;
 
-        // console.log('left: ', left);
-        // console.log('img: ', imgWidth);
-        // console.log('slideshow Left: ', $slideshow.offset().left);
-        // console.log('dif: ', dif);
+    //     // console.log('left: ', left);
+    //     // console.log('img: ', imgWidth);
+    //     // console.log('slideshow Left: ', $slideshow.offset().left);
+    //     // console.log('dif: ', dif);
 
-        $skidder.css('margin-left', parseInt(left.replace('px', '')) - dif + 'px');
-      });
+    //     $skidder.css('margin-left', parseInt(left.replace('px', '')) - dif + 'px');
+    //   });
   }
 
       $('#menu-button').on('click', function(e) {
