--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,10 +40,14 @@
     {% for category in site.portfolio %}
     <div id="{{category.id}}" class="slideshow-wrapper {% if site.initial-portfolio == category.id %}active {% endif %}">
         <div class="carousel">
+            <!-- {% assign tag = 'img' %}
+            {% if site.initial-portfolio == category.id %}
+                {% assign tag = 'img' %}
+            {% endif %} -->
             {% for image in category.images %}
             <div class="carousel-cell">
                 <div class="center-helper">
-                    <img src="{{image}}-small.jpg" srcset="{{image}}-small.jpg 1x, {{image}}.jpg 2x">
+                    <img data-flickity-lazyload-src="{{image}}-small.jpg" data-flickity-lazyload-srcset="{{image}}-small.jpg 1x, {{image}}.jpg 2x">
                 </div>
             </div>
             {% endfor %}
@@ -84,9 +88,10 @@ $(document).ready(function() {
             var $slideshow = $(sl);
             // $slideshow.find('img-preload').each(function() {
             //     var src = this.getAttribute('src');
+            //     var srcset = this.getAttribute('src');
             //     var $img = $(this);
 
-            //     $img.replaceWith($('<img/>').attr('src', src).attr('srcset', src + ' 1x, ' + src.replace('-small', '') + ' 2x'));
+            //     // $img.replaceWith($('<img/>').attr('src', src).attr('srcset', srcset));
             // });
 
             var category = $slideshow.parent()[0].id;
@@ -95,9 +100,10 @@ $(document).ready(function() {
                 // $slideshow.skidder({animationType: 'css', scaleSlides: false, maxWidth: "100%", maxHeight: "100%", swiping: false});
                 $slideshow.flickity({
                     imagesLoaded: true,
+                    percentPosition: false,
                     lazyLoad: 2,
                     fullscreen: true,
-                    autoPlay: 8000,
+                    // autoPlay: 8000,
                     setGallerySize: true,
                     wrapAround: true,
                 });
@@ -111,7 +117,7 @@ $(document).ready(function() {
                 // get Flickity instance
                 var flkty = $slideshow.data('flickity');
 
-                $slideshow.on( 'scroll.flickity', function() {
+                $slideshow.on('scroll.flickity', function() {
                     flkty.slides.forEach( function( slide, i ) {
                         var img = $imgs[i];
                         var x = ( slide.target + flkty.x ) * -1/3;
@@ -127,10 +133,27 @@ $(document).ready(function() {
                     });
                 });
 
+                if (window.ResizeObserver) {
+                    $slideshow.find('img').foreach
+                    let observer = new ResizeObserver(function() { 
+                        $slideshow.flickity('reposition');
+                    });
+
+                    $slideshow.find('img').each(function() {
+                        observer.observe(this)
+                    })
+                }
+                
+                $slideshow.on('lazyLoad.flickity', function() {
+                    $slideshow.flickity('resize');
+                    $slideshow.flickity('reposition');
+                })
+
                 $('#menu-' + category).removeClass('loading');
                 if(typeof cb == 'function') {
                     cb();
                 }
+            // });
         });
     }
 
