Another email change

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
             </p>
             <div class="medium-12 columns">
                 <input class="required" name="name" placeholder="name" type="text">
-                <input class="required email" name="email" placeholder="email" type="text">
+                <input class="required email" name="_reply " placeholder="email" type="text">
                 <input class="required" name="subject" placeholder="subject" type="text">
                 <textarea class="required" name="message" placeholder="message"></textarea>
                 <input type="text" name="_gotcha" style="display:none" />
@@ -133,16 +133,28 @@ $(document).ready(function() {
                     });
                 });
 
-                if (window.ResizeObserver) {
-                    $slideshow.find('img').foreach
-                    let observer = new ResizeObserver(function() { 
-                        $slideshow.flickity('positionCells')
-                    });
+                let changing = false
 
-                    $slideshow.find('img').each(function() {
-                        observer.observe(this)
-                    })
-                }
+                $slideshow.on('changing.flickity', function() {
+                    changing = true
+                });
+
+                $slideshow.on('settle.flickity', function() {
+                    changing = false
+                });
+
+                // if (window.ResizeObserver) {
+                //     $slideshow.find('img').foreach
+                //     let observer = new ResizeObserver(function() { 
+                //         if (!changing) {
+                //             // $slideshow.flickity('positionCells')
+                //         }
+                //     });
+
+                //     $slideshow.find('img').each(function() {
+                //         observer.observe(this)
+                //     })
+                // }
 
                 $('#menu-' + category).removeClass('loading');
                 if(typeof cb == 'function') {
