--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,14 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/jquery.skidder.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/flickity.css">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106539496-2"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-106539496-2');
+    </script>
 </head>
