--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,8 @@
 
 <body class="preload">
     <div class="profile mobile-hidden">
-        <img id="logo" src="images/logo.png" />
+        <img id="logo" src="images/logo.svg" />
+        <img id="logo-mobile" src="images/logo-mobile.svg" />
         <button id="menu-button" class="c-hamburger c-hamburger--htx">
         <span>toggle menu</span>
         </button>
