--- a/style.scss
+++ b/style.scss
@@ -69,7 +69,7 @@ p.clear {
 #logo-mobile {
     display: block;
     z-index: 10;
-    position: relative;
+    position: absolute;
     max-width: 80px;
     float: left;
     pointer-events: initial;
@@ -99,9 +99,9 @@ p.clear {
 }
 
 #menu-button {
-    position: relative;
+    position: absolute;
+    right: 2vw;
     z-index: 10;
-    float: right;
     pointer-events: initial;
     @media (min-width: $modile-width) {
         display: none;
