--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,16 +11,23 @@
         </button>
         <!-- <p class="clear"></p> -->
         <div id="nav" class="mobile-hidden">
-            <h3>Portfolio</h3>
-            <div class="gallery-nav">
-                <ul>
-                    {% for category in site.portfolio %}
-                    <li id="menu-{{category.id}}" class="loading {% if site.initial-portfolio == category.id %}current{% endif %}">
-                        <a data-cat="{{category.id}}" class="filter{% if site.initial-portfolio == category.id %} active{% endif %}" href="#">{{category.name}}</a>
-                    </li>
-                    {% endfor %}
-                </ul>
+            <div class="portfolio-link">
+                <h3 class="big-link">Portfolio</h3>
+                <div class="gallery-nav hidden">
+                    <ul>
+                        {% for category in site.portfolio %}
+                        <li id="menu-{{category.id}}" class="loading {% if site.initial-portfolio == category.id %}current{% endif %}">
+                            <a data-cat="{{category.id}}" class="filter{% if site.initial-portfolio == category.id %} active{% endif %}" href="#">{{category.name}}</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
+                </div>
             </div>
+
+            <h3><a href="https://michelleholiman.square.site/" class="big-link">Store</a></h3>
+
+            <br/>
+            <h3><a data-cat="about" class="big-link filter" href="#">About</a></h3>
 
             <div class="contact">
                 <a id="contact-button" data-cat="contact" class="filter" href="#">Contact</a> 
@@ -55,6 +62,16 @@
         </div>
     </div>
     {% endfor %}
+
+    <div id="about" class="slideshow-wrapper">
+        <div class="about-image">
+            <img src="images/about.jpg"></img>
+        </div>
+        
+        <div class="about-text">
+            {{ site.about }}
+        </div>
+    </div>
     
     <div id="contact" class="slideshow-wrapper">
         <form id="contact-form" method="POST">
@@ -83,6 +100,16 @@
 
 $(document).ready(function() {
     $('body').removeClass('preload');
+
+     $('.gallery-nav').hover(function() {
+        $('.gallery-nav').removeClass('hidden');
+        $('.portfolio-link').addClass('open');
+     }, undefined);
+
+     $('.profile').hover(undefined, function() {
+        $('.gallery-nav').addClass('hidden');
+        $('.portfolio-link').removeClass('open');
+     });
 
     function setupSlideshow(sl, cb) {
         setTimeout(function() {
