--- a/style.scss
+++ b/style.scss
@@ -419,6 +419,7 @@ p.clear {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: scroll;
 
     .about-text {
         padding: 20px;
@@ -428,12 +429,14 @@ p.clear {
         padding-left: 20px;
         
         img {
+            padding-right: 20px;
             height: 500px;
             max-height: 80vh;
             object-fit: contain;
             
             @media (min-width: $modile-width) {
                 max-width: 30vw;
+                padding-right: 0;
             }
         }
     }
