adding basic blog section

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
+    <base href="/">
     <!--<meta name="viewport" content="height=device-height, initial-scale=1.0" />-->
     <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,600">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/style.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/jquery.skidder.css">
     <link rel="stylesheet" href="{{ site.baseurl }}/css/flickity.css">
+    
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106539496-2"></script>
