--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,20 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+{% include head.html %}
 
-{% include header.html %}
+<body>
+    {% include sidebar.html %}
 
-<div class="content post">
-  <h1 class="post-title">{{ page.title }}</h1>
-  <div class="post-date">
-    <time>{{ page.date | date_to_string }}</time>
-  </div>
-  {{ content }}
-</div>
-{% if site.disqus_shortname %}
-  {% include disqus_comments.html %}
-{% endif %}
+    <div class="content post">
+        <h1 class="post-title">{{ page.title }}</h1>
+        <div class="post-date">
+          <time>{{ page.date | date_to_string }}</time>
+        </div>
+        {{ content }}
+    </div>
+
+    {% if site.disqus_shortname %}
+      {% include disqus_comments.html %}
+    {% endif %}
+</body>
+
