--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@ $source-sans: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
  $darkBlue: rgb(0, 0, 128);
  $darkBlueTransparent: rgba(0, 0, 128, 0.8);
+ $lightBlue: rgb(117, 198, 232);
  $greyText: #999;
  $hoverText: #555;
  $submitColor: rgb(0, 0, 128);
@@ -65,6 +66,51 @@ p.clear {
     }
 }
 
+.button {
+    a {
+        display: inline-block;
+        line-height: 48px;
+        height: 48px;
+        color: #ffffff;
+        color: #101010;
+        min-width: 212px;
+        background-color: $lightBlue;
+        text-align: center;
+        box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+        border-radius: 50px;
+        font-weight: bold;
+        // cursor: pointer;
+
+        &:hover {
+            background-color: darken($lightBlue, 8%);
+        }
+    }
+
+    &.full {
+        width: 100%;
+
+        a {
+            min-width: 100%;
+        }
+    }
+}
+
+.field-guide-content {
+    display: flex;
+    max-width: 800px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    flex-direction: column;
+    align-items: center;
+}
+
+#field-guide {
+    overflow: auto;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
 
 #logo-mobile {
     display: block;
@@ -95,6 +141,10 @@ p.clear {
             opacity: 1;
             pointer-events: initial;
         }
+    }
+
+    &:first-child {
+        padding-top: 50px;
     }
 }
 
@@ -461,12 +511,11 @@ p.clear {
 .portfolio-link {
 
     .big-link {
-        padding-top: 50px;
         color: #555;
     }
 
     .gallery-nav {
-        margin: 0 auto 30px;
+        margin: 0 auto;
         text-align: center;
         // display: table;
         border-spacing: 8px;
