Field Guide -> Photo guide and bigger links on the dropdown portfolio menu on mobile

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,7 @@
 
     <!-- <p class="clear"></p> -->
     <div id="nav" class="mobile-hidden">
-        <h3><a data-cat="field-guide" class="big-link filter" href="#/field-guide">Field Guide</a></h3>
+        <h3><a data-cat="field-guide" class="big-link filter" href="#/field-guide">Photo Guide</a></h3>
 
         <br/>
         
