Updated/Added simply-static-1-1722906154

--- a/wp-content/themes/beautiful-photo/style.css
+++ b/wp-content/themes/beautiful-photo/style.css
@@ -1144,6 +1144,7 @@ tbody tr:nth-child(odd) td,tbody tr:nth-child(odd) th{
 .post,
 .page {
 	margin: 0 0 1.5em;
+    word-break: break-word;
 }
 
 .updated:not(.published) {
