--- a/wp-content/themes/beautiful-photo/style.css
+++ b/wp-content/themes/beautiful-photo/style.css
@@ -1163,3 +1163,7 @@ tbody tr:nth-child(odd) td,tbody tr:nth-child(odd) th{
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+figcaption {
+    font-size: var(--wp--preset--font-size--small)
+}
